resources/alpine-bf3-sriov.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine1
  annotations:
    k8s.v1.cni.cncf.io/networks: '[
        { "name": "sriov-bf3-p0" },
        { "name": "sriov-bf3-p1" }
      ]'
spec:
  #  nodeSelector:
  #    kubernetes.io/hostname: dpu1
  #tolerations:
  #- key: dpu
  #  operator: Equal
  #  value: "true"
  #  effect: NoSchedule
  terminationGracePeriodSeconds: 1
  containers:
  - image: alpine
    command: ["sleep", "infinity"]
    imagePullPolicy: IfNotPresent
    name: alpine
    command: ["/bin/ash"]
    args: [ "-c", "apk add --no-cache iproute2 curl tcpdump iperf3; ip addr add 192.0.2.11/24 dev net1; ip addr add 198.18.100.11/24 dev net2; sleep infinity"]
    securityContext:
      privileged: true
      runAsUser: 0
    resources:
        limits:
          openshift.io/bf3_sriov_p0: 1
          openshift.io/bf3_sriov_p1: 1
