resources/alpine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - image: public.ecr.aws/docker/library/alpine:latest
        imagePullPolicy: Always
        command: ["/bin/ash"]
        args: [ "-c", "apk add ipmitool curl iperf3; sleep infinity"]
        name: alpine
        securityContext:
          privileged: true
          runAsUser: 0
