resources/alpine-macvlan.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine1
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-internal
spec:
  nodeSelector:
    kubernetes.io/hostname: rome1
  containers:
  - image: alpine
    command: ["sleep", "infinity"]
    imagePullPolicy: IfNotPresent
    name: alpine
    securityContext:
      privileged: true
      runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine2
  annotations:
    k8s.v1.cni.cncf.io/networks: macvlan-internal
spec:
  nodeSelector:
    kubernetes.io/hostname: rome1
  containers:
  - image: alpine
    command: ["sleep", "infinity"]
    imagePullPolicy: IfNotPresent
    name: alpine
    securityContext:
      privileged: true
      runAsUser: 0
